Layouts for jekyll.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Daniel Tull</title>
-</head>
+---
+layout: default
+title: Daniel Tull
+---
 
-<body>
-<h1>Trial</h1>
-</body>
-
-</html>
+Testing testing.
