--- a/index.html
+++ b/index.html
@@ -3,4 +3,12 @@ layout: default
 title: Daniel Tull
 ---
 
-Testing testing.
+{% for post in site.posts limit:5 %}
+07.
+<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+08.
+{{ post.content }}
+09.
+<em>Posted on {{ post.date | date_to_long_string }}.</em>
+10.
+{% endfor %}
