--- a/gisttest.html
+++ b/gisttest.html
@@ -106,7 +106,7 @@
 				</div>
 				
 				<div class="footer sixteen-col">
-					<p>&copy;2010 Daniel Tull. Completeley <a href="http://gridinator.com/">Gridinated</a>. Design inspiration from <a href="http://steffanwilliams.co.uk/">Steffan Williams</a>.</p>
+					<p>&copy;2010 Daniel Tull. Completely <a href="http://gridinator.com/">Gridinated</a>. Design inspiration from <a href="http://steffanwilliams.co.uk/">Steffan Williams</a>.</p>
 				</div>
 				
 			</div>
