Add title to the speaker queue

--- a/lidg/index.html
+++ b/lidg/index.html
@@ -3,7 +3,7 @@ layout: home
 title: LiDG Speaker Queue
 ---
 
-
+<h1>LiDG Speaker Queue</h1>
 
 <h3>May</h3>
 <ul>
@@ -12,7 +12,7 @@ title: LiDG Speaker Queue
 </ul>
 <h3>June</h3>
 <ul>
-	<li>Anthony Nascé</li>
+	<li>Anthony Nasce</li>
 	<li>Peter Nash</li>
 </ul>
 <h3>June</h3>
