--- a/lidg/index.html
+++ b/lidg/index.html
@@ -17,5 +17,10 @@ title: LiDG Speaker Queue
 </ul>
 <h3>July</h3>
 <ul>
+	<li>Mike Abdullah</li>
 	<li>Nigel Barber</li>
+</ul>
+<h3>August</h3>
+<ul>
+	<li>Daniel Tull</li>
 </ul>
