Add Ariel Elkin to the LiDG queue

--- a/lidg/index.html
+++ b/lidg/index.html
@@ -25,3 +25,7 @@ title: LiDG Speaker Queue
 	<li>Daniel Tull</li>
 	<li>Dan Thorpe</li>
 </ul>
+<h3>The future</h3>
+<ol>
+	<li>Ariel Elkin</li>
+</ol>
