Update LiDG list

--- a/lidg/index.html
+++ b/lidg/index.html
@@ -5,19 +5,18 @@ title: LiDG Speaker Queue
 
 <h1>LiDG Speaker Queue</h1>
 
-<h3>June</h3>
-<ul>
-	<li>Anthony Nasce</li>
-	<li>Nigel Barber</li>
-</ul>
-<h3>July</h3>
+<h3>August</h3>
 <ul>
 	<li>Mike Abdullah</li>
 	<li>Daniel Tull</li>
 </ul>
-<h3>August</h3>
+<h3>September</h3>
 <ul>
 	<li>Dan Thorpe</li>
+</ul>
+<h3>October</h3>
+<ul>
+	<li>Rob Stearn</li>
 </ul>
 <h3>The future</h3>
 <ol>
