Move Mike to November

--- a/lidg/index.html
+++ b/lidg/index.html
@@ -5,18 +5,23 @@ title: LiDG Speaker Queue
 
 <h1>LiDG Speaker Queue</h1>
 
-<h3>August</h3>
+<p>This list represents the most up-to date knowledge of the waiting list for speakers at LiDG. It should be noted that dates are for guidance only, as Apple may bump us for Hollywood stars.</p>
+
+<h3>August 2013</h3>
 <ul>
-	<li>Mike Abdullah</li>
 	<li>Daniel Tull</li>
 </ul>
-<h3>September</h3>
+<h3>September 2013</h3>
 <ul>
 	<li>Dan Thorpe</li>
 </ul>
-<h3>October</h3>
+<h3>October 2013</h3>
 <ul>
 	<li>Rob Stearn</li>
+</ul>
+<h3>November 2013</h3>
+<ul>
+	<li>Mike Abdullah</li>
 </ul>
 <h3>The future</h3>
 <ol>
