--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: Daniel Tull
 ---
 
-<p style="text-align:center;"><a href="https://github.com/danielctull/Fourgy/"><img src="https://github.com/danielctull/Fourgy/raw/screenshots/Screenshot.png" alt="Fourgy screenshot" /></a></p>
-<h2 style="text-align:center;"><a href="https://github.com/danielctull/Fourgy/">Fourgy</a></h2>
-<p style="text-align:center;"><a href="https://github.com/danielctull/Fourgy/">A nice 4th generation iPod emulator for iPhone</a></p>
+<p style="text-align:center;"><a href="https://itunes.apple.com/gb/app/weather-maps/id309229631"><img src="http://danieltull.co.uk/images/home/WeatherMaps.png" alt="Weather Maps screenshot" /></a></p>
+<h2 style="text-align:center;"><a href="https://itunes.apple.com/gb/app/weather-maps/id309229631">Weather Maps</a></h2>
+<p style="text-align:center;"><a href="https://itunes.apple.com/gb/app/weather-maps/id309229631">A nice 4th generation iPod emulator for iPhone</a></p>
 
