--- a/beta/home.html
+++ b/beta/home.html
@@ -18,9 +18,8 @@
 		<div class="menu">
 			<div class="page">
 				<ul>
-					<li><a href="home.html">Home</a></li>
 					<li><a href="blog.html">Blog</a></li>
-					<li><a href="presentations.html">Presentations</a></li>
+					<li><a href="presentations.html">Talks</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
