--- a/404.html
+++ b/404.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>{{ page.title }}</title>
-		<meta name="description" content="Daniel Tull is a freelance developer from Guildford, UK, working on iOS and Mac apps for clients such as Sky, BBC, Tesco and Gok Wan.">
-		<meta name="author" content="Daniel Tull">
-		<meta name="keywords" content="freelance,contract,ios,mac,developer,apps,london,uk">
-		<meta name="viewport" content="user-scalable=no, width=device-width">
-		<link rel="stylesheet" href="/style/css/style.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="/style/css/list.css" type="text/css" media="screen" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/DanielTull" />
-		<link rel="service.feed" type="application/atom+xml" title="Atom" href="http://feeds.feedburner.com/DanielTull" />
-	</head>
-	<body>
-		
-		<div class="header page">
-            <h1><a href="/">Daniel Tull</a>: {{ page.title }}</h1>
-		</div>
-		
-		{% include menu.html %}
+---
+layout: page
+title: 404
+---
 
-		<div class="main page">
-			<h1>404</h1>
-			<h2>Page not found</h2>
-			<p>Sorry, not sure why we can't find the page.</p>
-		</div>
-		{% include analytics.html %}
-  	</body>
-</html>
+<h1>404</h1>
+<h2>Page not found</h2>
+<p>Sorry, not sure why we can't find the page.</p>
