--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: home
 title: Daniel Tull
 ---
 
-<h1>Hello! I'm Daniel Tull.</h1><h1>A freelance Cocoa Developer</h1>
-<h2>If you need someone to make lovely iPhone, iPad, Apple TV, Apple Watch &amp; Mac applications, look no further.</h2>
+<h1>Hello! I'm Daniel Tull. A freelance iPhone, iPad, Apple TV, Apple Watch &amp; Mac Developer</h1>
+<h2>If you need someone to make lovely Cocoa applications, look no further.</h2>
